Updated Bill, Notification, and Payment Service classes